--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -13,6 +13,7 @@ services:
       - $PWD:/go/go-auth-manager
     environment: 
       - MONGO_URI=mongodb://go-auth-db-test:27017
+      - SERVER_HOST=http://test.io
   
   go-auth-db-test: 
     build: ./tests/seed
