--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,34 @@
 version: '3'
 
 services:
-  go-auth-test:
-    build:
-      context: .
-      dockerfile: ./deploy/Dockerfile.test
+  go-auth:
+    container_name: go-auth
+    build: .
     depends_on: 
-      - go-auth-db-test
+      - go-auth-db
+    ports: 
+      - 8080:8080
     networks: 
-      - go-auth-integration-test
+      - go-auth-integration
     volumes:
       - $PWD:/go/go-auth-manager
     environment: 
-      - MONGO_URI=mongodb://admin:5TZ4p8cjA6unrvVf@go-auth-db-test:27017
+      - MONGO_URI=mongodb://admin:5TZ4p8cjA6unrvVf@go-auth-db:27017
       - SERVER_HOST=http://test.io
   
-  go-auth-db-test: 
-    build: ./tests/seed
+  go-auth-db: 
+    container_name: go-auth-db
+    image: mongo:4.0
     ports: 
       - 27017:27017
     restart: on-failure
     networks: 
-      - go-auth-integration-test
+      - go-auth-integration
     environment: 
       - MONGO_INITDB_DATABASE=auth_manager
       - MONGO_INITDB_ROOT_USERNAME=admin
       - MONGO_INITDB_ROOT_PASSWORD=5TZ4p8cjA6unrvVf
 
 networks: 
-  go-auth-integration-test:
+  go-auth-integration:
     driver: bridge
